--- a/independence.Rmd
+++ b/independence.Rmd
@@ -2,10 +2,103 @@
 
 ## Motivating Example {-}
 
-Gambler's fallacy
+Many gamblers believe that after a string of losses, they are "due"
+for a win. Consider a gambler who repeatedly bets on reds in 
+roulette, an event with probability $18 / 38 \approx 0.474$. The ball has
+not landed in a red pocket on any of the last 4 spins of the wheel. 
+Does this make it more likely that he will win on the next spin?
+
+This is really a conditional probability question in disguise. 
+We want to know the probability that the ball will land in a
+red pocket on the 5th spin, _given_ that it did not land in a
+red pocket on any of the first 4 spins:
+$$ P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}). $$
+First, let's simulate this (conditional) probability:
+```{r}
+# define the 38 possible outcomes on a roulette wheel
+# (18 red spaces, 18 black spaces, 0, and 00)
+roulette_wheel <- c(rep("red", 18), rep("black", 18), "0", "00")
+
+sims <- c() # initialize vector for storing the simulation outcomes
+
+# repeat 100000 times
+for (i in 1:100000) {
+  # simulate 5 spins
+  spins <- sample(roulette_wheel, size=5, replace=TRUE)
+  
+  # restrict to simulations where the first 4 spins were all not red
+  if (all(spins[1:4] != "red")) {
+    sims <- c(sims, spins[5]) # add outcome of 5th spin to simulation results
+  }
+}
+
+# tabulate the simulation results
+results <- table(sims)
+results
+```
+
+The simulated probability is 
+$`r results["red"]` / `r length(sims)` \approx `r round(results["red"] / length(sims), 3)`$, which 
+does not seem different from the overall probability of a ball landing in a red pocket, 
+$18 / 38 \approx 0.474$. To verify that the two probabilities are _exactly_ the same, we have to 
+do the calculation:
+
+\begin{align*}
+P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}) &= \frac{P(\text{not red on first 4 spins}\ \cap\ \text{red on 5th spin}) }{P(\text{not red on first 4 spins})} \\
+&= \frac{ 20^4 \cdot 18 \big/ 38^5 }{20^4 \big/ 38^4} \\
+&= \frac{18}{38}.
+\end{align*}
+
+We see that the conditional probability is $18 / 38$, which is the same as the probability that the 5th 
+spin is red if we did not know the outcome of the first 4 spins. In mathematical notation,
+\begin{align*}
+P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}) &= P(\text{red on 5th spin})
+\end{align*}
+When conditioning on one event (e.g., "not red on first 4 spins") does not change the probability 
+of another event (e.g., "red on 5th spin"), we say that the two 
+events are **independent**. In this case, whether the gambler wins on the 5th spin is 
+independent of the fact that he has lost each of the last 4 spins. The folk belief that one is 
+"due" for a win after a series of losses is plain wrong and is known as the **gambler's fallacy**.
 
 ## Theory {-}
 
+```{definition}
+Two events $A$ and $B$ are said to be **independent** if 
+\begin{equation}
+P(B | A) = P(B).
+(\#eq:independence)
+\end{equation}
+```
+
+```{theorem}
+Two events $A$ and $B$ are independent if and only if their probabilities multiply:
+\begin{equation}
+P(A \cap B) = P(A) P(B).
+(\#eq:independence-mult)
+\end{equation}
+```
+```{proof}
+First, we assume \@ref(eq:independence) and show that \@ref(eq:independence-mult) holds:
+\begin{align*}
+P(A \cap B) &= P(A) P(B | A) & \text{by the Multiplication Rule} \\
+&= P(A) P(B) & \text{by assumption}.
+\end{align*}
+
+Conversely, we assume \@ref(eq:independence-mult) and show that \@ref(eq:independence) holds:
+\begin{align*}
+P(B | A) &= \frac{P(A \cap B)}{P(A)} & \text{by the definition of conditional probability}  \\
+&= \frac{P(A) P(B)}{P(A)} & \text{by assumption} \\
+&= P(B).
+\end{align*}
+```
+
 ## Worked Examples {-}
+
+1. One card is dealt off the top of a well-shuffled deck of cards. Is the event that the card is a 
+heart independent of the event that the card is an ace?
+2. Two cards are dealt off the top of a well-shuffled deck of cards. Is the event that the 
+first card is a heart independent of the event that the second card is a heart?
+3. In the dice game Yahtzee, five dice are rolled. The outcomes of the five dice are independent. 
+What is the probability of rolling a "Yahtzee" (i.e., when all five dice show the same number)?
 
 ## Exercises {-}
