--- a/binomial.Rmd
+++ b/binomial.Rmd
@@ -12,7 +12,36 @@ In 1693, Samuel Pepys and Isaac Newton had written to each other discussing a wa
 
 ------
 
-Let's find the probability of each of these events occurring
+First, let's estimate these three probabilities with simulation.
+
+**a)**
+
+```{r}
+N <- 10000
+x <- replicate(N, sample(1:6, 6, T))
+
+mean(colSums(x == 6) > 0)
+```
+
+**b)**
+
+```{r}
+x <- replicate(N, sample(1:6, 12, T))
+
+mean(colSums(x == 6) > 1)
+```
+
+**c)**
+
+```{r}
+x <- replicate(N, sample(1:6, 18, T))
+
+mean(colSums(x == 6) > 2)
+```
+
+So from the simulations, it seems that event **a)** has the highest probability of occurring.
+
+Now let's find the exact probability of each of these events occurring
 
 **a)** There are many possible ways that we could throw at least one 6 out of six dice rolls, (Ex: $2, 2, 3, 4, 5, 6$ or $1, 1, 3, 5, 6, 6$), but it may be easier to count the number of ways that we **don't** roll a 6. There is a $\dfrac{5}{6}$ chance that we don't roll a 6 on a single roll, so the probability that we don't get a 6 in any of the six rolls is $(\dfrac{5}{6})^6$. Therefore, the probability of event a) is $$1 - (\dfrac{5}{6})^6 = .6651$$
 
